--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-minimal
-<iframe src="https://uploads.knightlab.com/storymapjs/ed36603274e675c1e90073084bff8be3/husitske-valky/index.html">
+<iframe src="https://uploads.knightlab.com/storymapjs/ed36603274e675c1e90073084bff8be3/husitske-valky/index.html" width=800 height=600></iframe>
+
